# catalogue-tools4msp

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
ckanext/ckanext-branding/: setup.py
ckanext/ckanext-branding/ckanext/branding/: plugin.py
ckanext/ckanext-branding/ckanext/branding/fanstatic/: webassets.yaml
ckanext/ckanext-schemas/: setup.py
ckanext/ckanext-schemas/ckanext/schemas/: helpers.py  msp_data.json  plugin.py  utils.py
ckanext/ckanext-schemas/ckanext/schemas/fanstatic/: webassets.yaml
ckanext/ckanext-schemas/ckanext/schemas/logic/action/: create.py  update.py
dummy/ckan/: add_dependencies.sh  pyproject.toml
dummy/ckan/ckan_dummy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dummy/psycopg2/: pyproject.toml  setup.py
dummy/psycopg2/psycopg2.egg-info/: PKG-INFO  SOURCES.txt
entrypoint/: custom-entrypoint.sh  dev-entrypoint.sh
postgresql/docker-entrypoint-initdb.d/: 00_create_databases.sql
scratch/: 1.patch  2.patch  3.patch
tests/e2e/: frontend_test.py  resource_test.py
tools/ckan-utils/: .env  additional_spambots.txt  debug_clusters.py  delete_spambots.sh  find_invalid_datasets.py  fix_all_invalid_data.py  fix_invalid_data.py  generate_fixtures.py  run_update_all.sh  setup_env.sh  spambot_users.txt  update_all.py
tools/msp-dashboard/: Caddyfile  README.md  index.html  test.js
tools/msp-dashboard/assets/: main.js  styles.css
tools/spreadsheet-to-schema/: spreadsheet_to_schema.sh
